# dynwinrt

./: .gitignore  BENCHMARK.md  BENCHMARK_ANALYSIS.md  Cargo.toml  LICENSE  README.md  TODO.md  design.md
.claude/: settings.local.json
.github/workflows/: build.yml
bench-electron/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
bench-electron/src/main/: index.ts
bench-electron/src/preload/: index.d.ts  index.ts
bench-electron/src/renderer/: index.html
bench-electron/src/renderer/src/: App.tsx
bindings/js/: .gitignore  Cargo.toml  package-lock.json  package.json
bindings/js/samples/: array_struct.ts  bench_3way.ts  benchmark.ts  ocr.ts  test_progress.ts
bindings/js/src/: lib.rs
bindings/js/static-bench-cpp/: binding.gyp  find_sdk.js  package-lock.json  package.json  static_bench.cpp
bindings/js/static-bench-rust/: Cargo.toml  build.rs
bindings/js/static-bench-rust/src/: lib.rs
bindings/py/: Cargo.toml  README.md  pyproject.toml
bindings/py/src/: lib.rs  runtime.rs  values.rs
bindings/py/tests/: test_basic.py  test_runtime.py
crates/dynwinrt/: Cargo.toml  build.rs
crates/dynwinrt/benches/: BENCHMARK.md  bench.rs  uri_bench.rs
crates/dynwinrt/src/: array.rs  bindings.rs  call.rs  com_helpers.rs  dasync.rs  delegate.rs  lib.rs  map.rs  result.rs  roapi.rs  signature.rs  value.rs  vector.rs  winapp.rs
crates/dynwinrt/src/metadata_table/: arena.rs  iid.rs  method_handle.rs  mod.rs  type_handle.rs  type_kind.rs
src/: abi.rs  array.rs  call.rs  dasync.rs  interfaces.rs  lib.rs  meta.rs  result.rs  roapi.rs  signature.rs  type_table.rs  types.rs  value.rs  winapp.rs
src/metadata_table/: entries.rs  layout.rs  type_handle.rs  value_data.rs
tests/: test_simple_array.rs
tests/sample/: README.md  package.json  test_picker.ts  test_uri.ts
tools/winrt-meta/: .gitignore  Cargo.toml  E2E_TEST.md  README.md
tools/winrt-meta/npm/: cli.js  package-lock.json  package.json
tools/winrt-meta/npm/lib/: compile.js
tools/winrt-meta/src/: lib.rs  main.rs  meta.rs  types.rs
tools/winrt-meta/src/codegen/: common.rs  javascript.rs  javascript_esm.rs  mod.rs  typescript.rs
