[package]
name = "dynwinrt"
version = "0.1.0"
edition = "2024"

[dependencies]
libffi = "5.1.0"
windows-core = "0.62.2"
windows-metadata = "0.59.0"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
