[package]
name = "dynwinrt"
version = "0.1.0"
edition = "2024"

[dependencies]
libffi = "5.1.0"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
windows-collections = "0.3.2"
windows-core = "0.62.2"
windows-future = "0.3.2"
windows-link = "0.2.1"
windows-metadata = "0.59.0"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "ApplicationModel",
    "Management_Deployment",
    "Storage",
    "Storage_Streams",
    "Graphics_Imaging",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_Packaging_Appx",
    "Web_Http",
    "System_Threading",
    "Win32_System_Com",
    "Graphics_Imaging"
]


[dev-dependencies]
futures = "0.3.31"
windows-bindgen = "0.66.0"

[build-dependencies]
windows-bindgen = "0.66.0"
