[package]
name = "dynwinrt"
version = "0.1.0"
edition = "2024"

[dependencies]
libffi = "5.1.0"
paste = "1"
tokio = { version = "1.49.0", features = ["macros", "rt"] }
windows-collections = "0.3.2"
windows-core = "0.62.2"
windows-future = "0.3.2"
windows-link = "0.2.1"
windows-metadata = "0.59.0"

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "ApplicationModel",
    "Data_Xml_Dom",
    "Devices_Geolocation",
    "System_Threading",
    "Web_Http",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Management_Deployment",
]


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3.31"
[[bench]]
name = "bench"
harness = false
