[package]
name = "static-bench-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-sys = { version = "2", default-features = false, features = ["napi8"] }
windows-core = ">=0.59, <=0.62"
dynwinrt = { path = "../../../crates/dynwinrt" }

[dependencies.windows]
version = ">=0.59, <=0.62"
features = [
    "Foundation",
    "Foundation_Collections",
    "Devices_Geolocation",
]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
